Fix controlbar spacing

--- a/skin/sass/skin.sass
+++ b/skin/sass/skin.sass
@@ -207,6 +207,8 @@
     height: 2.4em
     bottom: 0
     z-index: 2
+    padding-left: 0.3em
+    padding-right: 0.3em
 
     > *
       margin: 0 .6em
@@ -216,14 +218,6 @@
 
     img
       width: 1.2em
-
-    > :first-child
-      margin-left: .9em
-
-    > :last-child
-      margin-right: .9em
-
-
 
   // generic bar (timeline and volume)
   .fp-bar
